2011-01-25  Rik  <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/fft.cc, DLD-FUNCTIONS/fft2.cc, DLD-FUNCTIONS/fftn.cc,
	load-save.cc: Make docstrings static by removing documentation
	depending on #ifdef configuration variables.

2011-01-25  Konstantinos Poulios  <logari81@googlemail.com>

	* src/graphics.cc (text::properties::update_text_extent):
	Disable warning about missing freetype library.

2011-01-25  Konstantinos Poulios  <logari81@googlemail.com>

	* src/graphics.cc (axes::properties::calc_ticks_and_lims):
	Fixing wrong dimensions of minor ticks vector.

2011-01-25  John W. Eaton  <jwe@octave.org>

	* oct-map.h (octave_map::octave_map (const string_vector&)):
	Initialize xvals elements to 1x1 Cells.  Bug #32222.

2011-01-24  Pascal Dupuis  <Pascal.Dupuis@worldonline.be>

	* ov-base-mat.h (class octave_base_matrix): Disallow assignment.
	* ov-range.h (class octave_range): Likewise.

2011-01-23  John W. Eaton  <jwe@octave.org>

	* ov-struct.cc (octave_scalar_struct::print_raw):
	Avoid unnecessary conversion of map value to Cell.

2011-01-22  John W. Eaton  <jwe@octave.org>

	* symtab.h (symbol_table::parent_classes):
	Also add parents of parents to the list.  Bug #32210.

2011-01-22  Jaroslav Hajek  <highegg@gmail.com>

	* ov-class.cc (octave_class::subsasgn): Find appropriate unique base
	before trying any indexed assignment.  Bug #32182.

2011-01-22  Konstantinos Poulios  <logari81@googlemail.com>

	* graphics.h.in, graphics.cc (xmtick, ymtick, zmtick):
	New properties holding minor ticks positions.
	(axes::properties::calc_ticks_and_lims): Calculation of minor ticks
	positions.
	* gl-render.h, gl-render.cc
	(opengl_renderer::render_grid,	opengl_renderer::render_tickmarks,
	opengl_renderer::render_ticktexts): New functions.
	(opengl_renderer::draw_axes): Make use of new rendering functions
	and minor ticks positions.
	Correct axis label positioning for x axis at top and y axis at right
	position. Bug #31800.