@@ -466,11 +466,13 @@ include TEMPLATE-INST/module.mk
 if AMCOND_ENABLE_DYNAMIC_LINKING
   DLD_DYNAMIC_SRC = $(DLD_FUNCTIONS_SRC)
   DLD_STATIC_SRC =
-  OCT_FILES = $(DLD_FUNCTIONS_SRC:.cc=.oct)
+  OCT_FILES = $(DLD_FUNCTIONS_LIBS:.la=.oct)
+  OCT_STAMP_FILES = $(subst DLD-FUNCTIONS/,DLD-FUNCTIONS/., $(DLD_FUNCTIONS_LIBS:.la=.oct-stamp))
 else
   DLD_DYNAMIC_SRC =
   DLD_STATIC_SRC = $(DLD_FUNCTIONS_SRC)
   OCT_FILES =
+  OCT_STAMP_FILES =
 endif
 
 liboctinterp_la_SOURCES = \
@@ -606,14 +608,15 @@ CLEANFILES = \
 DISTCLEANFILES = \
   .DOCSTRINGS \
   DOCSTRINGS \
-  $(OCT_FILES)
+  $(OCT_FILES) \
+  $(OCT_STAMP_FILES)
 
 MAINTAINERCLEANFILES = \
   $(BUILT_DISTFILES)
 
 octave_LDADD = $(OCTAVE_LIBS)
 
-all-local: $(OCT_FILES) DLD-FUNCTIONS/PKG_ADD .DOCSTRINGS
+all-local: $(OCT_STAMP_FILES) DLD-FUNCTIONS/PKG_ADD .DOCSTRINGS
 
 lex.lo lex.o oct-parse.lo oct-parse.o: \
   AM_CXXFLAGS := $(filter-out -Wold-style-cast, $(AM_CXXFLAGS))
